# FORKATA/project_GeoService_pprof/proxy/docs/swagger.json
@@ -91,8 +91,99 @@
                 }
             }
         },
+        "/auth/login": {
+            "post": {
+                "description": "Проверяет учётку и возвращает JWT",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Login",
+                "parameters": [
+                    {
+                        "description": "credentials",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controller.LoginRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.LoginResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/controller.Response"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controller.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/register": {
+            "post": {
+                "description": "Регистрирует пользователя и возвращает его ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Register",
+                "parameters": [
+                    {
+                        "description": "credentials",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controller.LoginRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/controller.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/controller.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/controller.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/mycustompath/pprof/allocs": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Профиль выборочных аллокаций памяти (allocs)",
                 "produces": [
                     "application/octet-stream"
@@ -113,6 +204,11 @@
         },
         "/mycustompath/pprof/block": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Профиль ожиданий блокировок (block profile)",
                 "produces": [
                     "application/octet-stream"
@@ -133,6 +229,11 @@
         },
         "/mycustompath/pprof/cmdline": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "cmdline",
                 "produces": [
                     "text/html"
@@ -153,6 +254,11 @@
         },
         "/mycustompath/pprof/goroutine": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Снимок текущих горутин (goroutine profile)",
                 "produces": [
                     "application/octet-stream"
@@ -173,6 +279,11 @@
         },
         "/mycustompath/pprof/heap": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Снимок кучи (heap profile)",
                 "produces": [
                     "application/octet-stream"
@@ -193,6 +304,11 @@
         },
         "/mycustompath/pprof/index": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Все доступные pprof-профили",
                 "produces": [
                     "text/html"
@@ -213,6 +329,11 @@
         },
         "/mycustompath/pprof/mutex": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Профиль ожидания мьютексов (mutex profile)",
                 "produces": [
                     "application/octet-stream"
@@ -233,6 +354,11 @@
         },
         "/mycustompath/pprof/profile": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Снимает CPU-профиль за заданное количество секунд (параметр seconds)",
                 "produces": [
                     "application/octet-stream"
@@ -262,6 +388,11 @@
         },
         "/mycustompath/pprof/symbol": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Выполняет преобразование адресов в имена символов (symbol lookup)",
                 "produces": [
                     "application/octet-stream"
@@ -291,6 +422,11 @@
         },
         "/mycustompath/pprof/threadcreate": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Профиль создания системных потоков (threadcreate profile)",
                 "produces": [
                     "application/octet-stream"
@@ -311,6 +447,11 @@
         },
         "/mycustompath/pprof/trace": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Снимает трассировку работы рантайма за заданное количество секунд (параметр seconds)",
                 "produces": [
                     "application/octet-stream"
@@ -340,6 +481,25 @@
         }
     },
     "definitions": {
+        "controller.LoginRequest": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "controller.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
         "controller.Response": {
             "type": "object",
             "properties": {
