# FORKATA/project_GeoService_pprof/proxy/internal/controller/controller.go
@@ -150,6 +150,7 @@ func (h *UserHandler) HandlerRegister(w http.ResponseWriter, r *http.Request){
 // @Tags diagnostics
 // @Produce text/html
 // @Success 200 {string} string "HTML со списком профилей"
+// @Security BearerAuth
 // @Router /mycustompath/pprof/index [get]
 func PprofIndex(w http.ResponseWriter, r *http.Request) {
     pprof.Index(w, r)
@@ -160,6 +161,7 @@ func PprofIndex(w http.ResponseWriter, r *http.Request) {
 // @Tags diagnostics
 // @Produce text/html
 // @Success 200 {string} string "HTML со списком профилей"
+// @Security BearerAuth
 // @Router /mycustompath/pprof/cmdline [get]
 func PprofCmdline(w http.ResponseWriter, r *http.Request){
 	pprof.Cmdline(w, r)
@@ -171,6 +173,7 @@ func PprofCmdline(w http.ResponseWriter, r *http.Request){
 // @Param seconds query int false "Продолжительность профилирования в секундах" default(30)
 // @Produce application/octet-stream
 // @Success 200 {file} file "pprof CPU binary"
+// @Security BearerAuth
 // @Router /mycustompath/pprof/profile [get]
 func PprofProfile(w http.ResponseWriter, r *http.Request) {
     pprof.Profile(w, r)
@@ -182,6 +185,7 @@ func PprofProfile(w http.ResponseWriter, r *http.Request) {
 // @Param symbol query string true "Адрес или символ для поиска"
 // @Produce application/octet-stream
 // @Success 200 {file} file "pprof symbol binary"
+// @Security BearerAuth
 // @Router /mycustompath/pprof/symbol [get]
 func PprofSymbol(w http.ResponseWriter, r *http.Request) {
     pprof.Symbol(w, r)
@@ -193,6 +197,7 @@ func PprofSymbol(w http.ResponseWriter, r *http.Request) {
 // @Param seconds query int false "Длительность трассировки в секундах" default(1)
 // @Produce application/octet-stream
 // @Success 200 {file} file "pprof trace binary"
+// @Security BearerAuth
 // @Router /mycustompath/pprof/trace [get]
 func PprofTrace(w http.ResponseWriter, r *http.Request) {
     pprof.Trace(w, r)
@@ -203,6 +208,7 @@ func PprofTrace(w http.ResponseWriter, r *http.Request) {
 // @Tags diagnostics
 // @Produce application/octet-stream
 // @Success 200 {file} file "pprof allocs binary"
+// @Security BearerAuth
 // @Router /mycustompath/pprof/allocs [get]
 func PprofAllocs(w http.ResponseWriter, r *http.Request) {
     pprof.Handler("allocs").ServeHTTP(w, r)
@@ -213,6 +219,7 @@ func PprofAllocs(w http.ResponseWriter, r *http.Request) {
 // @Tags diagnostics
 // @Produce application/octet-stream
 // @Success 200 {file} file "pprof block binary"
+// @Security BearerAuth
 // @Router /mycustompath/pprof/block [get]
 func PprofBlock(w http.ResponseWriter, r *http.Request) {
     pprof.Handler("block").ServeHTTP(w, r)
@@ -223,6 +230,7 @@ func PprofBlock(w http.ResponseWriter, r *http.Request) {
 // @Tags diagnostics
 // @Produce application/octet-stream
 // @Success 200 {file} file "pprof goroutine binary"
+// @Security BearerAuth
 // @Router /mycustompath/pprof/goroutine [get]
 func PprofGoroutine(w http.ResponseWriter, r *http.Request) {
     pprof.Handler("goroutine").ServeHTTP(w, r)
@@ -233,6 +241,7 @@ func PprofGoroutine(w http.ResponseWriter, r *http.Request) {
 // @Tags diagnostics
 // @Produce application/octet-stream
 // @Success 200 {file} file "pprof heap binary"
+// @Security BearerAuth
 // @Router /mycustompath/pprof/heap [get]
 func PprofHeap(w http.ResponseWriter, r *http.Request) {
     pprof.Handler("heap").ServeHTTP(w, r)
@@ -243,6 +252,7 @@ func PprofHeap(w http.ResponseWriter, r *http.Request) {
 // @Tags diagnostics
 // @Produce application/octet-stream
 // @Success 200 {file} file "pprof mutex binary"
+// @Security BearerAuth
 // @Router /mycustompath/pprof/mutex [get]
 func PprofMutex(w http.ResponseWriter, r *http.Request) {
     pprof.Handler("mutex").ServeHTTP(w, r)
@@ -253,6 +263,7 @@ func PprofMutex(w http.ResponseWriter, r *http.Request) {
 // @Tags diagnostics
 // @Produce application/octet-stream
 // @Success 200 {file} file "pprof threadcreate binary"
+// @Security BearerAuth
 // @Router /mycustompath/pprof/threadcreate [get]
 func PprofThreadcreate(w http.ResponseWriter, r *http.Request) {
     pprof.Handler("threadcreate").ServeHTTP(w, r)
